--- a/food.html
+++ b/food.html
@@ -3,6 +3,7 @@
   <head>
     <title>Food</title>
         <link rel="stylesheet" href="styles.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
     <meta charset="utf-8" />
   </head>
@@ -33,7 +34,7 @@
               onions. Kushari's a perfect meal that is substantial, nutrient-packed and
               cheap. Exactly what the Egyptians were after!
             </p>
-            <img src="kushari.jpg" />
+            <img src="kushari.jpg" class="img-rounded" />
           </section>
   
           <section >
